#1651 Finalização da tela de trocas/devoluções

--- a/Glass/Vue/Estoques/TrocasDevolucoes/Templates/LstTrocaDevolucao.Filtro.html
+++ b/Glass/Vue/Estoques/TrocasDevolucoes/Templates/LstTrocaDevolucao.Filtro.html
@@ -74,16 +74,16 @@
     <div>
         <span class="form-group">
             <label>Altura</label>
-            <input type="number" v-model.number="filtroAtual.idPedido" style="width: 60px" />
+            <input type="number" v-model.number="filtroAtual.alturaMinima" style="width: 60px" />
             <label>a</label>
-            <input type="number" v-model.number="filtroAtual.idPedido" style="width: 60px" />
+            <input type="number" v-model.number="filtroAtual.alturaMaxima" style="width: 60px" />
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
         <span class="form-group">
             <label>Largura</label>
-            <input type="number" v-model.number="filtroAtual.idPedido" style="width: 60px" />
+            <input type="number" v-model.number="filtroAtual.larguraMinima" style="width: 60px" />
             <label>a</label>
-            <input type="number" v-model.number="filtroAtual.idPedido" style="width: 60px" />
+            <input type="number" v-model.number="filtroAtual.larguraMaxima" style="width: 60px" />
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
