--- a/Glass/Vue/Carregamentos/Templates/LstCarregamentos.OrdensCarga.html
+++ b/Glass/Vue/Carregamentos/Templates/LstCarregamentos.OrdensCarga.html
@@ -40,7 +40,7 @@
         </template>
         <template slot="item" slot-scope="{ item, index }">
             <td>
-                <button @click.prevent="desassociarOrdemCarga(item)" title="Remover OC">
+                <button @click.prevent="desassociarPedido(item)" title="Remover OC">
                     <img src="../Images/ExcluirGrid.gif">
                 </button>
             </td>
