#2572-Correção pr da listagem de movimentações de liberações

--- a/Glass/Vue/Liberacoes/Movimentacoes/Templates/LstMovimentacoesLiberacoes.Filtro.html
+++ b/Glass/Vue/Liberacoes/Movimentacoes/Templates/LstMovimentacoesLiberacoes.Filtro.html
@@ -24,7 +24,7 @@
         <span class="form-group">
             <label>Funcionário</label>
             <lista-selecao-id-valor v-bind:item-selecionado.sync="funcionarioAtual" texto-selecionar="Todos" v-bind:funcao-recuperar-itens="obterItensFiltroFuncionarios"
-                v-bind:ordenar="false" campo-id="codigo"></lista-selecao-id-valor>
+                v-bind:ordenar="false"></lista-selecao-id-valor>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
